@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class LearningPlanService {
@@ -16,24 +15,26 @@ public class LearningPlanService {
     private LearningPlanRepository repository;
 
     public LearningPlan createPlan(LearningPlan plan) {
+        plan.setArchived(false); // Default to not archived when creating
         return repository.save(plan);
-    }
-
-    public Optional<LearningPlan> getPlanById(String id) {
-        return repository.findById(id);
     }
 
     public List<LearningPlan> getPlansByUser(String userId) {
         return repository.findByUserId(userId);
     }
 
+    public Optional<LearningPlan> getPlanById(String id) {
+        return repository.findById(id);
+    }
+
     public LearningPlan updatePlan(String id, LearningPlan updatedPlan) {
-        return repository.findById(id).map(plan -> {
-            plan.setTitle(updatedPlan.getTitle());
-            plan.setDescription(updatedPlan.getDescription());
-            plan.setTopics(updatedPlan.getTopics());
-            plan.setResources(updatedPlan.getResources());
-            return repository.save(plan);
+        return repository.findById(id).map(existingPlan -> {
+            existingPlan.setTitle(updatedPlan.getTitle());
+            existingPlan.setDescription(updatedPlan.getDescription());
+            existingPlan.setTopics(updatedPlan.getTopics());
+            existingPlan.setUserId(updatedPlan.getUserId());
+            existingPlan.setArchived(updatedPlan.isArchived());
+            return repository.save(existingPlan);
         }).orElse(null);
     }
 
@@ -47,7 +48,7 @@ public class LearningPlanService {
 
     public LearningPlan archivePlan(String id) {
         return repository.findById(id).map(plan -> {
-            plan.setArchived(!plan.isArchived()); // Toggle instead of hardcoding
+            plan.setArchived(!plan.isArchived()); // Toggle archived status
             return repository.save(plan);
         }).orElse(null);
     }
@@ -57,9 +58,9 @@ public class LearningPlanService {
                 .filter(plan ->
                         plan.getTitle().toLowerCase().contains(query.toLowerCase()) ||
                                 plan.getDescription().toLowerCase().contains(query.toLowerCase()) ||
-                                plan.getTopics().stream().anyMatch(topic -> topic.toLowerCase().contains(query.toLowerCase()))
+                                plan.getTopics().stream()
+                                        .anyMatch(topic -> topic.getTitle().toLowerCase().contains(query.toLowerCase()))
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
-
 }
